fix: resolve checkstyle and PMD violations across all modules
Comprehensive linter compliance fixes across AST, Parser, Formatter, CLI,
and Benchmark modules to achieve zero violations.

Checkstyle Fixes (1,636+ violations):
- LeftCurly: Move opening braces to new lines (1,264 fixes)
- LineLength: Break lines exceeding 120 chars, extract complex expressions
- IllegalToken: Replace ++ and -- with += 1 and -= 1 (27 fixes)
- SeparatorWrap: Move dots/parens/semicolons to end of previous line (234+ fixes)
- MissingJavadocType: Add class-level Javadoc (93 fixes)
- RequireEmptyLineBeforeBlockTagGroup: Add spacing before @param/@return (56 fixes)
- AvoidInlineConditionals: Convert ternary to if-else (4 fixes)
- JavadocStyle: Add periods to first sentences

PMD Fixes (200+ violations):
- AppendCharacterWithChar: Use char literals instead of strings (68 fixes)
- ConsecutiveAppendsShouldReuse: Chain StringBuilder.append() calls (58 fixes)
- SystemPrintln: Suppress for CLI user-facing output (53 suppressions)
- MethodNamingConventions: Suppress for descriptive test names (74 suppressions)
- UseExplicitTypes: Replace var with explicit types (15 fixes)
- InsufficientStringBufferDeclaration: Add initial capacity (9 fixes)
- UseUnderscoresInNumericLiterals: Improve readability (7 fixes)
- AvoidSynchronizedAtMethodLevel: Use private lock object (5 fixes)
- AssignmentInOperand: Refactor switch expressions (5 fixes)
- FieldNamingConventions: Suppress for framework conventions (9 suppressions)
- UseLocaleWithCaseConversions: Add Locale.ROOT (5 fixes)
- RedundantFieldInitializer: Remove unnecessary = false/null (13 fixes)
- InefficientEmptyStringCheck: Replace .trim().isEmpty() with .isBlank() (13 fixes)
- UseUtilityClass: Add private constructors (3 fixes)
- UseDiamondOperator: Simplify generic instantiation
- LooseCoupling: Use interface types

Test Improvements:
- Convert main() methods to proper @Test methods
- Remove misleading test methods (testResourceLimitEnforcement, testRecurs